<resources>
    <string name="app_name">Construa seu Átomo!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="n">n</string>
    <string name="p">p+</string>
    <string name="e">e-</string>

    <string name="text1">1- INTRODUÇÃO:\n
Este tutorial tem por objetivo explicar o funcionamento do aplicativo “Construa Seu Átomo” que é um software que trata sobre o conceito de estrutura atômica segundo o modelo atômico de Borh, que é um tema tratado dentro do currículo de Química. \n\n

Tendo como referência a Lei 13.146, de 06 de julho de 2015, em especial o seu Art.28. O público alvo geral são os alunos de turmas inclusivas dando uma atenção mais específica para os estudantes com deficiência auditiva da disciplina de Química da rede pública de ensino básico ou superior. Apesar da referência mencionada, nada impede do software ser utilizado por discentes sem necessidades especiais.\n\n

Por meio do aplicativo, os alunos poderão representar a estrutura eletrônica de um átomo, segundo o modelo atômico de Bohr, adicionando ou removendo prótons, nêutrons e elétrons. A representação permite aos alunos conferir o número de prótons, nêutrons e elétrons, o símbolo e o nome do elemento químico, o número de massa, o número atômico, a carga e, por fim, a distribuição eletrônica.\n
\n2- MATERIAL NECESSÁRIO PARA UTILIZAÇÃO DO APLICATIVO:\n\n
• Dispositivo móvel (tablet), de 7 polegadas ou mais, com sistema operacional Android®.\n
• Aplicativo “Contrua Seu Átomo” .\n\n
3- RESUMO DO FUNCIONAMENTO:\n\n
• É fundamental que o aplicativo esteja instalado corretamente no dispositivo móvel (tablet).\n
• Ao executar o “Construa seu átomo”, o usuário visualizará a tela de apresentação do aplicativo e os botões "Tutorial" e “Começar” (Figura I).
    </string>

    <string name="figura1">\nFigura I: Tela de apresentação do aplicativo.\n\n</string>
    <string name="text2">• Ao clicar no botão “tutorial” (Figura I), o usuário será direcionado para as instruções por escrito sobre como usar o aplicativo e, ao clicar no botão “começar”, o usuário será direcionado para a tela de representação do átomo (tela principal do aplicativo) (Figura II).\n</string>
    <string name="figura2">\nFigura II: tela de representação do átomo.\n\n</string>
    <string name="text3">• Legenda:\n\n
1)	≡: menu principal – botão utilizado para acessar a tabela periódica completa, tutorial por escrito e tutorial em vídeo com tradução para a Línguagem Brasileira de Sinais (Figura III). \n\n
2)	p+: próton – botão utilizado para alterar a quantidade de prótons (adicionar ou remover) no átomo a ser representado.\n\n
3)  n : nêutron – botão utilizado para alterar a quantidade de nêutrons (adicionar ou remover) no átomo a ser representado.\n\n
4)	e- : elétron – botão utilizado para alterar a quantidade de elétrons (adicionar ou remover) no átomo a ser representado.\n\n
5)	Adicionar – botão utilizado para ativar a ação “adicionar” no átomo a ser representado.\n\n
6)	Remover – botão utilizado para ativar a ação “remover” no átomo a ser representado.\n\n
7) 	Tabela desativada – botão utilizado para ativar ou desativar a tabela periódica resumida para eventuais consultas (Figura IV).\n\n
8)	X – local onde será apresentado o símbolo do elemento químico referente ao átomo representado.\n\n
9)	Elemento – local onde será apresentado o nome do elemento químico referente ao átomo representado.\n\n
10)	A – local onde será apresentado o número de massa do átomo representado.\n\n
11)	Z – local onde será apresentado o número atômico do átomo representado.\n\n
12)	C – local onde será apresentado o carga do átomo representado.\n\n
13)	Limpar – botão utilizado para limpar todas as informações da tela.\n\n
14)	Fechar – botão utilizado para fechar o aplicativo.\n\n
Obs.: a distribuição eletrônica aparecerá automaticamente na parte inferior da tela, a partir do momento que o usuário adicionar o primeiro elétron (Figura V).\n\n
    </string>

    <string name="figura3">Figura III: Menu principal.\n\n</string>
    <string name="figura4">Figura IV: Tabela periódica resumida ativada.\n\n</string>
    <string name="figura5">Figura V: Distribuição eletrônica do átomo de hidrogênio no estado fundamental.\n\n</string>
    <string name="text4">• Selecione uma das opções “Adicionar” ou “Remover”. Ao clicar em uma das alternativas, o fundo do botão selecionado ficará na cor verde indicando que ele está ativo (Figura VI).\n\n</string>
    <string name="figura6">Figura VI: Botões "Adicionar" e "Remover" selecionados.\n\n</string>
    <string name="text5">• Em seguida, selecione uma das partículas que deseja adicionar ou remover, sendo elas “Prótons”, “Nêutrons” e “Elétrons”. Ao clicar em uma das partículas, o fundo do botão mudará de cor, indicando que ele está ativo. O botão do próton “p+” ficará vermelho  (Figura VII), o botão do nêutron “n” ficará verde (Figura VIII) e o botão do elétron “e-” ficará azul (Figura IX). \n\n</string>
    <string name="figura7">Figura VII: Botão próton (p+) selecionado.\n\n</string>
    <string name="figura8">Figura VIII: Botão nêutron (n) selecionado.\n\n</string>
    <string name="figura9">Figura IX: Botão elétron (e-) selecionado.\n\n</string>
    <string name="text6">• Por fim, ao manusear as partículas, clique no local adequado para adicioná-las ou removê-las – prótons e nêutrons na região que representa o núcleo atômico e elétrons na região que representa a eletrosfera do átomo.\n\n
                        4- DEMONSTRAÇÃO DE UM ÁTOMO REPRESENTADO:\n\n</string>
    <string name="text7">• Observar-se na Figura X a representação de um átomo de sódio. Na tela é possível observar todas as informações disponibilizadas pelo aplicativo, segundo a representação do modelo atômico Bohr. São elas: o número de prótons, nêutrons e elétrons inseridos, o nome e símbolo do elemento químico, a carga do elemento em questão, a distribuição eletrônica de acordo com Linus Pauling e a mensagem se o átomo representado é um isótopo ou não.\n\n </string>
    <string name="figura10">Figura X: Representação do átomo de sódio.</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
