<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.danieljunior.bohrapp.tutorial">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

            <Button
                android:id="@+id/tutorial_video"

                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape_vermelho"

                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="Tutorial em Vídeo"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imdedo"
                android:layout_width="112dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="195dp"
                />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text1"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:foreground="@drawable/full_border"
                app:srcCompat="@mipmap/figura1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/figura1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/text2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="650dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:foreground="@drawable/full_border"
                app:srcCompat="@mipmap/figura2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/figura2"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text3"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="457dp"
                    android:layout_height="359dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:foreground="@drawable/full_border"
                    app:srcCompat="@mipmap/figura3" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="457dp"
                    android:layout_height="359dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="36dp"
                    android:foreground="@drawable/full_border"
                    app:srcCompat="@mipmap/figura3_1" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="16dp"
                android:text="@string/figura3"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/text4"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="457dp"
                    android:layout_height="359dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:foreground="@drawable/full_border"
                    app:srcCompat="@mipmap/figura4" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="457dp"
                    android:layout_height="359dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="36dp"
                    android:foreground="@drawable/full_border"
                    app:srcCompat="@mipmap/figura5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="481dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/figura4"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="481dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:text="@string/figura5"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="455dp"
                android:layout_height="347dp"
                android:layout_gravity="center"
                android:foreground="@drawable/full_border"
                app:srcCompat="@mipmap/figura6" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/figura6"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/text5"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="600dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:foreground="@drawable/full_border"
                app:srcCompat="@mipmap/figura7" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/figura7"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/text6"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/start_tutorial"

                android:layout_width="110dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape_verde"

                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="Começar"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />


<!--
            <Button
                android:id="@+id/start_tutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:drawableRight="@drawable/ic_done_black_24dp"
                android:text="Começar!" />
            -->
<!--
            <Button
                android:id="@+id/tutorial_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:drawableRight="@drawable/ic_play_circle_outline_black_24dp"
                android:text="Tutorial em Vídeo" />

-->

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
